# doh-auth-proxy

./: .dockerignore  .env.example  .gitignore  .token.example  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  credential.env  credential.example  docker-compose.yml  doh-auth-proxy.toml  domains_block.example  domains_override.example
.github/: dependabot.yml
.github/workflows/: docker_build_push.yml  release-docker.yml  shiftleft-analysis.yml  test.yml
dap-bin/: Cargo.toml
dap-bin/src/: constants.rs  log.rs  main.rs
dap-bin/src/config/: mod.rs  parse.rs  target_config.rs  toml.rs  utils_verifier.rs
dap-lib/: Cargo.toml
dap-lib/src/: bootstrap.rs  constants.rs  error.rs  globals.rs  http.rs  lib.rs  trait_resolve_ips.rs
dap-lib/src/auth/: auth.rs  auth_main.rs  auth_service.rs  authenticator.rs  message.rs  mod.rs  service.rs  token.rs
dap-lib/src/client/: mod.rs
dap-lib/src/doh_client/: cache.rs  dns_message.rs  doh_client_healthcheck.rs  doh_client_main.rs  mod.rs  odoh.rs  odoh_config_store.rs  path_manage.rs
dap-lib/src/doh_client/manipulation/: domain_block.rs  domain_override.rs  mod.rs
dap-lib/src/http_client/: http_client_main.rs  http_client_service.rs
dap-lib/src/proxy/: counter.rs  mod.rs  proxy_main.rs  proxy_tcp.rs  proxy_udp.rs  socket.rs
docker/: .env.example  Dockerfile  Dockerfile-slim  README.md  docker-compose.yml  entrypoint.sh  run.sh
docker-bin/: entrypoint.sh  run.sh
legacy/: Cargo.toml
legacy/src/: context.rs  dns_message.rs  log.rs  proxy.rs
legacy/src/client/: cache.rs  credential.rs  doh_client.rs  http_bootstrap.rs  odoh.rs
legacy/src/config/: config_parser.rs  mod.rs
legacy/src/plugins/: plugin_override_domains.rs
legacy/src/servers/: counter.rs  mod.rs  udpserver.rs
proxy-bin/: Cargo.toml
proxy-bin/src/: constants.rs  error.rs  log.rs  main.rs
proxy-bin/src/config/: mod.rs  parse.rs  plugins.rs  target_config.rs  toml.rs  utils_dns_proto.rs  utils_verifier.rs
proxy-lib/: Cargo.toml
proxy-lib/src/: bootstrap.rs  constants.rs  error.rs  globals.rs  lib.rs  log.rs  trait_resolve_ips.rs
proxy-lib/src/auth/: auth_main.rs  auth_service.rs  error.rs  mod.rs
proxy-lib/src/doh_client/: cache.rs  dns_message.rs  doh_client_healthcheck.rs  doh_client_main.rs  error.rs  mod.rs  odoh.rs  odoh_config_store.rs  path_manage.rs
proxy-lib/src/doh_client/manipulation/: default_rule.rs  domain_block.rs  domain_override.rs  mod.rs  regexp_vals.rs
proxy-lib/src/http_client/: error.rs  http_client_main.rs  http_client_service.rs  mod.rs  trait_resolve_ips.rs
proxy-lib/src/proxy/: counter.rs  mod.rs  proxy_main.rs  proxy_tcp.rs  proxy_udp.rs  socket.rs
server-registry/: Cargo.toml
src/: bootstrap.rs  cache.rs  client.rs  config.rs  config_toml.rs  constants.rs  counter.rs  credential.rs  dns_message.rs  errors.rs  exitcodes.rs  globals.rs  http_bootstrap.rs  main.rs  odoh.rs  proxy.rs  tcpserver.rs  toml.rs  udpserver.rs  utils.rs
src/client/: cache.rs  credential.rs  doh_client.rs  http_bootstrap.rs  mod.rs  odoh.rs
src/config/: config_parser.rs  config_toml.rs  mod.rs  utils_verifier.rs
src/plugins/: constants.rs  mod.rs  plugin_block_domains.rs  plugin_override_domains.rs
src/servers/: tcpserver.rs  udpserver.rs
