[package]
name = "doh-auth-proxy"
description = "DNS Proxy for DoH, ODoH and Mutualized ODoH with Authorization"
version = "0.2.0"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/doh-auth-proxy"
repository = "https://github.com/junkurihara/doh-auth-proxy"
license = "MIT"
readme = "README.md"
categories = [
  "asynchronous",
  "network-programming",
  "command-line-utilities",
  "web-programming::http-client",
]
keywords = [
  "dns",
  "https",
  "dns-over-https",
  "doh",
  "oblivious-dns-over-https",
  "odoh",
  "mutualized-odoh",
  "proxy",
  "authorization",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.4.0"
clap = { version = "4.3.11", default-features = false, features = [
  "std",
  "cargo",
  "wrap_help",
] }
tokio = { version = "1.29.1", features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
futures = { version = "0.3.28", default-features = false }
reqwest = { version = "0.11.18", default-features = false, features = [
  "default",
  "trust-dns",
  "json",
] }
url = "2.4.0"
trust-dns-proto = { version = "0.22.0", default-features = false }
trust-dns-resolver = { version = "0.22.0", default-features = false }
anyhow = "1.0.71"
dotenv = "0.15.0"
serde_json = "1.0.100"
jwt-simple = "0.11.5"
p256 = { version = "0.13.2", features = ["jwk", "pem"] }
chrono = "0.4.26"
odoh-rs = { git = "https://github.com/junkurihara/odoh-rs.git" }
rand = "0.8.5"
bytes = "1.4.0"
urlencoding = "2.1.2"
toml = { version = "0.7.6", default-features = false, features = ["parse"] }
serde = "1.0.166"
hashlink = "0.8.3"
cedarwood = "0.4.6"
regex = "1.9.0"
rustc-hash = "1.1.0"

# logging
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.0"

[dev-dependencies]
trust-dns-client = "0.22.0"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
