[package]
name = "doh-auth-proxy"
description = "DNS Proxy for DoH, ODoH and Mutualized ODoH with Authorization"
version = "0.2.0"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/doh-auth-proxy"
repository = "https://github.com/junkurihara/doh-auth-proxy"
license = "MIT"
readme = "README.md"
categories = [
  "asynchronous",
  "network-programming",
  "command-line-utilities",
  "web-programming::http-client",
]
keywords = [
  "dns",
  "https",
  "dns-over-https",
  "doh",
  "oblivious-dns-over-https",
  "odoh",
  "mutualized-odoh",
  "proxy",
  "authorization",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.4.0"
clap = { version = "4.3.24", default-features = false, features = [
  "std",
  "cargo",
  "wrap_help",
] }
tokio = { version = "1.32.0", features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
futures = { version = "0.3.28", default-features = false }
reqwest = { version = "0.11.20", default-features = false, features = [
  "default",
  "trust-dns",
  "json",
] }
url = "2.4.0"
trust-dns-proto = { version = "0.23.0", default-features = false }
trust-dns-resolver = { version = "0.23.0", default-features = false, features = [
  "tokio-runtime",
] }
anyhow = "1.0.75"
dotenv = "0.15.0"
serde_json = "1.0.105"
jwt-simple = "0.11.6"
p256 = { version = "0.13.2", features = ["jwk", "pem"] }
chrono = "0.4.26"
odoh-rs = { git = "https://github.com/junkurihara/odoh-rs.git" }
rand = "0.8.5"
bytes = "1.4.0"
urlencoding = "2.1.3"
toml = { version = "0.8.0", default-features = false, features = ["parse"] }
serde = "1.0.186"
hashlink = "0.8.3"
cedarwood = "0.4.6"
regex = "1.9.3"
rustc-hash = "1.1.0"
mimalloc = { version = "*", default-features = false }


# logging
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
trust-dns-client = "0.23.0"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
