[package]
name = "doh-auth-proxy-lib"
description = "DNS Proxy Library for DoH, ODoH and Mutualized ODoH with Authorization"
version = "0.3.0"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/doh-auth-proxy"
repository = "https://github.com/junkurihara/doh-auth-proxy"
license = "MIT"
readme = "../README.md"
categories = [
  "asynchronous",
  "network-programming",
  "command-line-utilities",
  "web-programming::http-client",
]
keywords = [
  "dns",
  "https",
  "dns-over-https",
  "doh",
  "oblivious-dns-over-https",
  "odoh",
  "mutualized-odoh",
  "proxy",
  "authorization",
]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.32.0", features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
futures = { version = "0.3.28", default-features = false }
anyhow = "1.0.75"
tracing = "0.1.37"
thiserror = "1.0.50"
async-trait = "0.1.74"

# http client
reqwest = { version = "0.11.22", default-features = false, features = [
  "json",
  "trust-dns",
  "default",
] }
url = "2.4.1"


# for bootstrap dns resolver
trust-dns-resolver = { version = "0.23.1", default-features = false, features = [
  "tokio-runtime",
] }


# authentication
jwt-simple = "0.11.7"
chrono = "0.4.31"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
p256 = { version = "0.13.2", features = ["jwk", "pem"] }
