[package]
name = "doh-auth-proxy-legacy"
description = "DNS Proxy for DoH, ODoH and Mutualized ODoH with Authorization"
version = "0.2.0"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/doh-auth-proxy"
repository = "https://github.com/junkurihara/doh-auth-proxy"
license = "MIT"
readme = "README.md"
categories = [
  "asynchronous",
  "network-programming",
  "command-line-utilities",
  "web-programming::http-client",
]
keywords = [
  "dns",
  "https",
  "dns-over-https",
  "doh",
  "oblivious-dns-over-https",
  "odoh",
  "mutualized-odoh",
  "proxy",
  "authorization",
]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.5.0"
clap = { version = "4.4.10", default-features = false, features = [
  "std",
  "cargo",
  "wrap_help",
] }
tokio = { version = "1.34.0", features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
futures = { version = "0.3.29", default-features = false }
reqwest = { version = "0.11.22", default-features = false, features = [
  "rustls-tls",
  "trust-dns",
  "json",
] }
url = "2.5.0"
trust-dns-proto = { version = "0.23.2", default-features = false }
trust-dns-resolver = { version = "0.23.2", default-features = false, features = [
  "tokio-runtime",
] }
anyhow = "1.0.75"
dotenv = "0.15.0"
serde_json = "1.0.108"
jwt-simple = "0.12.1"
p256 = { version = "0.13.2", features = ["jwk", "pem"] }
chrono = "0.4.31"
odoh-rs = { git = "https://github.com/junkurihara/odoh-rs.git" }
rand = "0.8.5"
bytes = "1.5.0"
urlencoding = "2.1.3"
toml = { version = "0.8.8", default-features = false, features = ["parse"] }
serde = "1.0.193"
hashlink = "0.9.0"
cedarwood = "0.4.6"
regex = "1.10.2"
rustc-hash = "1.1.0"
mimalloc = { version = "*", default-features = false }


# logging
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
trust-dns-client = "0.23.2"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
