[package]
name = "doh-auth-proxy"
description = "DNS Proxy for DoH, ODoH and Mutualized ODoH with Authorization"
version = "0.3.3"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/doh-auth-proxy"
repository = "https://github.com/junkurihara/doh-auth-proxy"
license = "MIT"
readme = "../README.md"
categories = [
  "asynchronous",
  "network-programming",
  "command-line-utilities",
  "web-programming::http-client",
]
keywords = [
  "dns",
  "https",
  "dns-over-https",
  "doh",
  "oblivious-dns-over-https",
  "odoh",
  "mutualized-oblivious-dns",
  "mutualized-odoh",
  "modoh",
  "proxy",
  "authorization",
]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doh-auth-proxy-lib = { path = "../proxy-lib/" }

anyhow = "1.0.80"
mimalloc = { version = "*", default-features = false }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
derive_builder = "0.20.0"
tokio = { version = "1.36.0", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
async-trait = "0.1.77"

# config
clap = { version = "4.5.2", features = ["std", "cargo", "wrap_help"] }
toml = { version = "0.8.10", default-features = false, features = ["parse"] }
hot_reload = "0.1.5"

# logging
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
dotenv = "0.15.0"
