[package]
name = "doh-auth-proxy"
description = "DNS Proxy for DoH, ODoH and Mutualized ODoH with Authorization"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doh-auth-proxy-lib = { path = "../proxy-lib/" }

anyhow = "1.0.86"
mimalloc = { version = "*", default-features = false }
serde = { version = "1.0.202", default-features = false, features = ["derive"] }
derive_builder = "0.20.0"
tokio = { version = "1.37.0", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
async-trait = "0.1.80"

# config
clap = { version = "4.5.4", features = ["std", "cargo", "wrap_help"] }
toml = { version = "0.8.13", default-features = false, features = ["parse"] }
hot_reload = "0.1.5"

# logging
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["chrono", "json"] }
url = "2.5.0"
dotenv = "0.15.0"
