[package]
name = "doh-auth-proxy"
description = "DNS Proxy for DoH, ODoH and Mutualized ODoH with Authorization"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doh-auth-proxy-lib = { path = "../proxy-lib/", default-features = false, features = [
  "anonymous-token",
] }

anyhow = "1.0.94"
mimalloc = { version = "*", default-features = false }
serde = { version = "1.0.216", default-features = false, features = ["derive"] }
derive_builder = "0.20.2"
tokio = { version = "1.42.0", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
async-trait = "0.1.83"

# config
clap = { version = "4.5.23", features = ["std", "cargo", "wrap_help"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
hot_reload = "0.1.8"

# logging
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["chrono", "json"] }

url = "2.5.4"
env-file-reader = "0.3.0"
