[package]
name = "doh-auth-proxy-lib"
description = "DNS Proxy Library for DoH, ODoH and Mutualized ODoH with Authorization"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
publish.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.37.0", features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
futures = { version = "0.3.30", default-features = false, features = [
  "std",
  "async-await",
] }
anyhow = "1.0.86"
tracing = "0.1.40"
thiserror = "1.0.61"
async-trait = "0.1.80"
serde = { version = "1.0.202", features = ["derive"] }
itertools = "0.13.0"
rustc-hash = "1.1.0"

# doh and odoh client with cache and query manipulation plugins
odoh-rs = { git = "https://github.com/junkurihara/odoh-rs.git" }
bytes = "1.6.0"
hickory-proto = { version = "0.24.1", default-features = false }
data-encoding = "2.6.0"
hashlink = "0.9.1"
cedarwood = "0.4.6"
regex = "1.10.4"

# network
socket2 = "0.5.7"

# http client
reqwest = { version = "0.12.4", default-features = false, features = [
  "json",
  "http2",
  "hickory-dns",
  "rustls-tls",
] }
url = "2.5.0"

# for bootstrap dns resolver
hickory-client = { version = "0.24.1", default-features = false, features = [
  "dnssec",
] }

# authentication
auth-client = { git = "https://github.com/junkurihara/rust-token-server", package = "rust-token-server-client", branch = "develop" }

[dev-dependencies]
hickory-client = "0.24.1"
urlencoding = "2.1.3"
