[package]
name = "doh-auth-proxy-lib"
description = "DNS Proxy Library for DoH, ODoH and Mutualized ODoH with Authorization"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
publish.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.42.0", features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
futures = { version = "0.3.31", default-features = false, features = [
  "std",
  "async-await",
] }
anyhow = "1.0.95"
tracing = "0.1.41"
thiserror = "2.0.9"
async-trait = "0.1.84"
serde = { version = "1.0.217", features = ["derive"] }
itertools = "0.14.0"
ahash = "0.8.11"
crossbeam-channel = "0.5.14"

# doh and odoh client with cache and query manipulation plugins
odoh-rs = { git = "https://github.com/junkurihara/odoh-rs.git", branch = "master" }
bytes = "1.9.0"
hickory-proto = { version = "0.24.2", default-features = false }
data-encoding = "2.6.0"
hashlink = "0.10.0"
match-domain = "0.1.2"
regex = "1.11.1"

# network
socket2 = "0.5.8"

# http client
reqwest = { version = "0.12.12", default-features = false, features = [
  "json",
  "http2",
  "hickory-dns",
  "rustls-tls",
] }
url = "2.5.4"

# for bootstrap dns resolver
hickory-client = { version = "0.24.2", default-features = false, features = [
  "dnssec",
] }

# authentication
auth-client = { git = "https://github.com/junkurihara/rust-token-server", package = "rust-token-server-client", branch = "develop", default-features = false, features = [
  "reqwest",
] }
# auth-client = { path = "../../rust-token-server/lib-client/", package = "rust-token-server-client", default-features = false, features = [
#   "reqwest",
# ] }

[dev-dependencies]
hickory-client = "0.24.2"
urlencoding = "2.1.3"

[features]
default = ["anonymous-token"]
anonymous-token = ["auth-client/blind-signatures"]
